--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/django
-# Edit at https://www.toptal.com/developers/gitignore?templates=django
-
-### Django ###
 *.log
 *.pot
 *.pyc
@@ -10,18 +6,15 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
+/media
 venv
-# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
-# in your Git repository. Update and uncomment the following line accordingly.
-# <django-project-name>/staticfiles/
+/static
 
-### Django.Python Stack ###
-# Byte-compiled / optimized / DLL files
+
 *.py[cod]
 *$py.class
 
-# C extensions
+
 *.so
 
 # Distribution / packaging
